# MythicIndex

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md
.Jules/: palette.md
.gemini/: mcp.json
.jules/: bolt.md  palette.md  (+1 more)
mythic-index/MemoryQuill/story-content/story-agent/: README.md  pyproject.toml  storylint.yaml
mythic-index/MemoryQuill/story-content/story-agent/sample-output/: config.json  index.json
mythic-index/MemoryQuill/story-content/story-agent/sample-output/chapter/: ch01-ash-and-compass.report.json  ch01-ash-and-compass.report.md
mythic-index/MemoryQuill/story-content/story-agent/sample-output/final/: action-plan.md  dashboard.json
mythic-index/MemoryQuill/story-content/story-agent/scripts/: start_celery.sh  start_redis.sh
mythic-index/MemoryQuill/story-content/story-agent/storylint/: __init__.py  canon.py  cli.py  config.py  llm.py  models.py  parser.py  render.py  storage.py  utils.py  worker.py
mythic-index/MemoryQuill/story-content/story-agent/storylint/prompts/: adjacent_flow.j2  arc_window.j2  chapter_audit.j2  synthesis.j2
mythic-index/MemoryQuill/story-content/story-agent/storylint/templates/: chapter_report.md.j2
mythic-index/MemoryQuill/story-content/story-agent/storylint_adk/: README.md  __init__.py  cli.py  config.py  models.py  storylint.yaml
mythic-index/MemoryQuill/story-content/story-agent/storylint_adk/adk_project/: agent.py
mythic-index/MemoryQuill/story-content/story-agent/tests/: test_models.py  test_parser.py  test_storylint_adk_models.py  test_storylint_adk_parser.py
(+1732 files in other folders)
